# data-scientist-hub

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  TODO.md  config.mk  docker-compose.yaml  hooks.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tags.json  tmp.md  update_resource_changelog.py
.github/workflows/: ci.yml
CHANGELOG/: index.html
about/: index.html
archive/2019/: index.html
archive/2020/: index.html
archive/2021/: index.html
archive/2022/: index.html
archive/2023/: index.html
archive/2024/: index.html
archive/2025/: index.html
archive/2026/: index.html
assets/: aws-container.jfif  dsh_datamapplot.html  tree-polyline.html
blog/: index.html
category/announcements/: index.html
category/dvss/: index.html
category/guides/: index.html
category/prompts/: index.html
category/qftb/: index.html
category/resources/: index.html
category/solutions/: index.html
category/til/: index.html
docs/: .pages  CHANGELOG.md  about.md  dsh_hooks.py  index.md
docs/articles/: .pages  aws-logs-in-streamlit.md  pulp.md  transportation-problem.md
docs/assets/: apprise.drawio  dsh_datamapplot.html
docs/blog/: .authors.yml
docs/courses/: certifications.md
docs/css/: extra.css  mkdocstrings.css
finder/: app.py  finder.py  index.json
notebooks/: 20201113_json_processing.ipynb  20211209_resources.ipynb
projects/: index.html
resources/: index.html
scripts/: url_parser.py
search/: search_index.json
stylesheets/: extra.css  mkdocstrings.css
tags/: index.html
(+995 files in other folders)
