[metadata]
name = DSH
version = attr: 2.3
description = Data Scientist Hub, my personal knowledge center
long_description = file: README.md
long_description_content_type = text/markdown
author = Silvio Lugaro
author_email = silvio.lugaro@gmail.com

[options]
packages = find:
python_requires = >=3.9
install_requires =
    setuptools-git-versioning
    mkdocs
    mkdocs-material
    mkdocs-awesome-pages-plugin
    mkdocs-blog-plugin
    pymdown-extensions    

[options.packages.find]
exclude = notebooks
