[metadata]
name = DSH
description = Data Scientist Hub, my personal knowledge center
long_description = file: README.md
long_description_content_type = text/markdown
author = Silvio Lugaro
author_email = silvio.lugaro@gmail.com

[options]
packages = find:
python_requires = >=3.9
install_requires =
    mkdocs==1.5.3
    mkdocs-material==9.5.3
    mkdocs-awesome-pages-plugin==2.9.2
    pymdown-extensions==10.6
    mkdocs-glightbox==0.3.5

[options.packages.find]
exclude = notebooks
